Kubernetes/nginx/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - nodePort: 30080
    port: 80
    targetPort: 80
    protocol: TCP
    name: nginx-port
